--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "amqplib": "^0.8.0",
+    "antd": "^4.16.13",
     "axios": "^0.24.0",
+    "chart.js": "^3.6.1",
+    "faker": "^5.5.3",
+    "nanoid": "^3.1.30",
     "pubsub-js": "^1.9.3",
     "pubsub.js": "^1.5.2",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
